src/action/components/sponsor-progress/index.css
:host {
  position: sticky;
  bottom: 0;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  column-gap: 12px;
  padding: 8px;
  border-top: 1px solid rgb(var(--active-grey));

  background-color: rgb(var(--white));
}

#caption {
  flex-basis: max-content;
  flex-grow: 0;
  flex-shrink: 0;
  margin: 0;
}

#progress {
  flex: 1;
  height: 8px;
  border-radius: 6px;
  overflow: hidden;

  background-color: rgb(var(--passive-grey));
  color: #ec6cb9;
}

#progress-bar {
  background-color: currentColor;
  height: 100%;
  width: 0;
  transition: width 1s ease-in-out;
}

#cover-link {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
}

#cover-link:not([href]) {
  display: none;
}

